# hello_solana

./: rpc_api.md  solana_cli.md
anchor/: Anchor.toml  pnpm-lock.yaml  readme.md
anchor/programs/anchor_favorites/: Cargo.toml
anchor/programs/emit_log/: Cargo.toml
anchor/tests/: anchor_favorites.ts  bank.ts  emit_log.ts  tokenbank.ts
anchor_favorites/: Anchor.toml  package.json  pnpm-lock.yaml  readme.md
anchor_favorites/programs/anchor_favorites/: Cargo.toml
anchor_favorites/programs/bank/: Cargo.toml
anchor_favorites/programs/emit_log/: Cargo.toml
anchor_favorites/programs/tokenbank/: Cargo.toml
anchor_favorites/programs/tokenbank/src/: lib.rs
anchor_favorites/tests/: anchor_favorites.ts  bank.ts  emit_log.ts  tokenbank.ts
backend/: README.md  keypair.json  keypair_base58.txt  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: bank_deposit.ts  config.ts  get_all_favorites_pdas.ts  index.ts  keypair_to_base58.ts  listen_favorites.ts  measure_cu.ts  scan_bank.ts  scan_favorites.ts  scan_favorites_by_block.ts  scan_favorites_with_coder.ts  scan_sol_transfers.ts  spl_token_operations.ts  transfer.ts  transfer_sol.ts
backend/src/examples/: instruction_encoding_demo.ts
backend/src/idl/: bank.json  emit_log.json  favorites.json  tokenbank.json
backend/src/types/: bank.ts  emit_log.ts  favorites.ts  tokenbank.ts
backend/src/utils/: README.md  discriminator.ts  instruction_decoder.ts
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: app-header.tsx
(+20 files in other folders)
