[package]
name = "anchor_favorites"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_favorites"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }

[dev-dependencies]
litesvm = "0.9.1"
solana-sdk = "2.3.1"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = { version = "3.0.2", features = ["bincode"] }
